--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,7 +69,7 @@
     display: block;
 }
 .subnav-primary{
-    top: 100%;
+    top: 90%;
     left: 0;
 }
 
@@ -170,6 +170,7 @@
     background-color: #fff;
     text-align: left;
     user-select: none;
+    cursor: pointer;
 }
 
 .header__search-box:focus .header__search-box-list{
@@ -436,11 +437,8 @@
     background-color: #fff;
     border-radius: 100rem;
     text-decoration: none;
-    transition: all ease 0.3s;
 }
-.section-2__btn:hover{
-    opacity: 0.9;
-}
+
 
 /* Section-3 CSS */
 .section-3{
@@ -632,11 +630,8 @@
 }
 .section-5__btn{
     background-color: #fff;
-    transition: all ease 0.3s;
 }
-.section-5__btn:hover{
-    opacity: 0.8;
-}
+
 .section-5__btn--orange{
     color: #f3a46b;
 }
@@ -862,6 +857,14 @@
     line-height: 1.4rem;;
     letter-spacing: 1px;
     margin-top: 15px;
+    cursor: pointer;
+    text-decoration: none;
+    transform: translateX(0);
+    transition: all linear 0.2s;
+}
+.footer__partner-title:hover{
+    transform: translateX(8px);
+    color: purple;
 }
 .footer__right-arrow{
     font-size: 1rem;
